# serializer version: 1
# name: test_default_prompt[None]
  list([
    dict({
      'content': '''
        This smart home is controlled by Home Assistant.
        
        An overview of the areas and the devices in this smart home:
        
        Test Area:
        - Test Device (Test Model)
        
        Test Area 2:
        - Test Device 2
        - Test Device 3 (Test Model 3A)
        - Test Device 4
        - 1 (3)
        
        If the user wants to control a device, tell them to edit the AI configuration and allow access to Home Assistant.
      ''',
      'role': 'system',
    }),
    dict({
      'content': 'hello',
      'role': 'user',
    }),
    ChatCompletionMessage(content='Hello, how can I help you?', role='assistant', function_call=None, tool_calls=None),
  ])
# ---
# name: test_default_prompt[config_entry_options0-None]
  list([
    dict({
      'content': '''
        This smart home is controlled by Home Assistant.
        
        An overview of the areas and the devices in this smart home:
        
        Test Area:
        - Test Device (Test Model)
        
        Test Area 2:
        - Test Device 2
        - Test Device 3 (Test Model 3A)
        - Test Device 4
        - 1 (3)
        
        Call the intent tools to control the system. Just pass the name to the intent.
      ''',
      'role': 'system',
    }),
    dict({
      'content': 'hello',
      'role': 'user',
    }),
    ChatCompletionMessage(content='Hello, how can I help you?', role='assistant', function_call=None, tool_calls=None),
  ])
# ---
# name: test_default_prompt[config_entry_options0-conversation.openai]
  list([
    dict({
      'content': '''
        This smart home is controlled by Home Assistant.
        
        An overview of the areas and the devices in this smart home:
        
        Test Area:
        - Test Device (Test Model)
        
        Test Area 2:
        - Test Device 2
        - Test Device 3 (Test Model 3A)
        - Test Device 4
        - 1 (3)
        
        Call the intent tools to control the system. Just pass the name to the intent.
      ''',
      'role': 'system',
    }),
    dict({
      'content': 'hello',
      'role': 'user',
    }),
    ChatCompletionMessage(content='Hello, how can I help you?', role='assistant', function_call=None, tool_calls=None),
  ])
# ---
# name: test_default_prompt[config_entry_options1-None]
  list([
    dict({
      'content': '''
        This smart home is controlled by Home Assistant.
        
        An overview of the areas and the devices in this smart home:
        
        Test Area:
        - Test Device (Test Model)
        
        Test Area 2:
        - Test Device 2
        - Test Device 3 (Test Model 3A)
        - Test Device 4
        - 1 (3)
        
        Call the intent tools to control the system. Just pass the name to the intent.
      ''',
      'role': 'system',
    }),
    dict({
      'content': 'hello',
      'role': 'user',
    }),
    ChatCompletionMessage(content='Hello, how can I help you?', role='assistant', function_call=None, tool_calls=None),
  ])
# ---
# name: test_default_prompt[config_entry_options1-conversation.openai]
  list([
    dict({
      'content': '''
        This smart home is controlled by Home Assistant.
        
        An overview of the areas and the devices in this smart home:
        
        Test Area:
        - Test Device (Test Model)
        
        Test Area 2:
        - Test Device 2
        - Test Device 3 (Test Model 3A)
        - Test Device 4
        - 1 (3)
        
        Call the intent tools to control the system. Just pass the name to the intent.
      ''',
      'role': 'system',
    }),
    dict({
      'content': 'hello',
      'role': 'user',
    }),
    ChatCompletionMessage(content='Hello, how can I help you?', role='assistant', function_call=None, tool_calls=None),
  ])
# ---
# name: test_default_prompt[conversation.openai]
  list([
    dict({
      'content': '''
        This smart home is controlled by Home Assistant.
        
        An overview of the areas and the devices in this smart home:
        
        Test Area:
        - Test Device (Test Model)
        
        Test Area 2:
        - Test Device 2
        - Test Device 3 (Test Model 3A)
        - Test Device 4
        - 1 (3)
        
        If the user wants to control a device, tell them to edit the AI configuration and allow access to Home Assistant.
      ''',
      'role': 'system',
    }),
    dict({
      'content': 'hello',
      'role': 'user',
    }),
    ChatCompletionMessage(content='Hello, how can I help you?', role='assistant', function_call=None, tool_calls=None),
  ])
# ---
